--- a/projects/demo.html
+++ b/projects/demo.html
@@ -4,9 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>demo</title>
+    <title>表格和表单</title>
+    <style>
+        table{
+            width: 600px;
+            border-collapse: collapse;
+        }
+        th {
+            background-color: blue
+        }
+    td,th {
+        border: 1px solid #ccc;
+        text-align: center;
+        padding: 20px;
+    }  
+    </style>
 </head>
 <body>
+   <table>
+    <thead>
+<tr>
+<th>姓名</th>
+<th>体重</th>
+<th>球衣号码</th>
+<th>国籍</th>
+<th>身高</th>
+</tr>
+<tr>
+    <td>詹姆斯哈登</td>
+    <td>220磅</td>
+    <td>13</td>
+    <td>美国</td>
+    <td>1.96米</td>
+</tr>
+<tr>
+    <td>克里斯保罗</td>
+    <td>175磅</td>
+    <td>3</td>
+    <td>美国</td>
+    <td>1.83米</td>
+</tr>
+<tr>
+    <td>卡梅隆安东尼</td>
+    <td>230磅</td>
+    <td>7</td>
+    <td>美国</td>
+    <td>2.03米</td>
+</tr>
+
+
+
+
+    </thead>
+       
+    </table> 
     
 </body>
 </html>
